# anchor_platform_tutorial

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: auth.py  db.py  platform.py  server.py
app/migrations/versions/: 859dc13ad821_.py
app/templates/: base.html  error.html  index.html  logged_out.html
platform/config/: config.yml  stellar.toml
